Обнови главную страницу и стили
Переработан код главной страницы: удалены лишние компоненты, добавлена генерация карточек на основе массива данных, внесены изменения в layout с использованием нового класса контейнера. Также обновлены стили, добавлена сетка для карточек и новый класс контейнера.

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,4 +1,12 @@
 .page {
-	display: flex;
-	flex-direction: column;
+	display: grid;
+	grid-template-columns: repeat(auto-fit, 350px);
+	gap: 24px;
+	justify-content: center;
+}
+
+/* Временно для теста кнопок */
+.btns {
+	width: 350px;
+	height: 400px;
 }
