--- a/app/globals.css
+++ b/app/globals.css
@@ -9,6 +9,7 @@
 html,
 body {
 	max-width: 100vw;
+	min-height: 100vh;
 	overflow-x: hidden;
 }
 
@@ -17,6 +18,12 @@ body {
 	background: var(--background);
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+}
+
+.container {
+	max-width: 1200px;
+	padding: 0 16px;
+	margin: 0 auto;
 }
 
 * {
